Backend works fine but have communication issues with frontend

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "assets",
   "version": "1.0.0",
-  "description": "Node.js backend for Internet Computer project",
-  "main": "main.js",
+  "description": "Internet Computer frontend assets",
+  "type": "module",
   "scripts": {
-    "start": "node main.js",
     "build": "echo \"Building the frontend...\" && exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@dfinity/agent": "^0.15.7",
+    "@dfinity/principal": "^0.15.6"
   },
   "author": "",
   "license": "ISC"
